--- a/renovate.json
+++ b/renovate.json
@@ -5,12 +5,11 @@
     ],
     "regexManagers": [
       {
-        "customType": "regex",
         "fileMatch": [
           "^gitea.txt$"
         ],
         "matchStrings": [
-          "freedroid/freedroid-src\\s(?<currentValue>.*?)\\s"
+          "freedroid/freedroid-src=(?<currentValue>.*?)"
         ],
         "packageNameTemplate": "freedroid/freedroid-src",
         "depNameTemplate": "https://codeberg.org/freedroid/freedroid-src",
