Migrate config renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -1,21 +1,21 @@
 {
-    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-    "extends": [
-      "github>platform-engineering-org/.github"
-    ],
-    "regexManagers": [
-      {
-        "fileMatch": [
-          "^gitea.txt$"
-        ],
-        "matchStrings": [
-          "freedroid/freedroid-src=(?<currentValue>.*?)"
-        ],
-        "packageNameTemplate": "freedroid/freedroid-src",
-        "depNameTemplate": "https://codeberg.org/freedroid/freedroid-src",
-        "currentValueTemplate": "master",
-        "datasourceTemplate": "gitea-tags"
-      }
-    ]
-  
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": [
+    "github>platform-engineering-org/.github"
+  ],
+  "regexManagers": [
+    {
+      "customType": "regex",
+      "fileMatch": [
+        "^gitea.txt$"
+      ],
+      "matchStrings": [
+        "freedroid/freedroid-src=(?<currentValue>.*?)"
+      ],
+      "packageNameTemplate": "freedroid/freedroid-src",
+      "depNameTemplate": "https://codeberg.org/freedroid/freedroid-src",
+      "currentValueTemplate": "master",
+      "datasourceTemplate": "gitea-tags"
+    }
+  ]
 }
