--- a/renovate.json
+++ b/renovate.json
@@ -15,8 +15,7 @@
       "packageNameTemplate": "freedroid/freedroid-src",
       "depNameTemplate": "https://codeberg.org/freedroid/freedroid-src",
       "currentValueTemplate": "master",
-      "datasourceTemplate": "gitea-tags",
-      "versioning": "loose"
+      "datasourceTemplate": "gitea-tags"
     }
   ]
 }
