--- a/renovate.json
+++ b/renovate.json
@@ -14,6 +14,7 @@
       ],
       "packageNameTemplate": "freedroid/freedroid-src",
       "depNameTemplate": "https://codeberg.org/freedroid/freedroid-src",
+      "registryUrlTemplate": "https://codeberg.org",
       "datasourceTemplate": "gitea-tags"
     }
   ]
