--- a/renovate.json
+++ b/renovate.json
@@ -12,8 +12,8 @@
       "matchStrings": [
         "^(?<depName>.*)=(?<currentValue>.*)$"
       ],
-      "packageNameTemplate": "freedroid/freedroid-src",
-      "depNameTemplate": "https://codeberg.org/freedroid/freedroid-src",
+      "packageNameTemplate": "https://codeberg.org/freedroid/freedroid-src",
+      "depNameTemplate": "freedroid/freedroid-src",
       "registryUrlTemplate": "https://codeberg.org",
       "datasourceTemplate": "gitea-tags"
     }
