--- a/renovate.json
+++ b/renovate.json
@@ -13,7 +13,7 @@
         "^(?<depName>.*)=(?<currentValue>.*)$"
       ],
       "packageNameTemplate": "https://codeberg.org/freedroid/freedroid-src",
-      "depNameTemplate": "freedroid/freedroid-src",
+      "depNameTemplate": "https://codeberg.org/freedroid/freedroid-src",
       "registryUrlTemplate": "https://codeberg.org",
       "datasourceTemplate": "gitea-tags"
     }
